solc_ossfuzz_seed_corpus/test_sol/test_86b946870bfd813dfda16aa9f22045e0957bed9ef61f4f0ed0ca6bd08914c063_42c9dac8e4149ee0e38823407d9fbf661aaa073a_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0(bytes14 i0) private    returns(uint160 o0,bool o1)
  {
    {
      function (bool, string memory) internal   l0;
      bytes memory l1 = bytes(string("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff3b773589"));
      bool[5][5] memory l2 = [[true, false, true, false, true], [false, false, false, false, true], [false, true, false, true, true], [true, false, true, true, true], [false, false, true, false, true]];
      int136 l3 = int136(6220337858906735983993983643420921353987);
      bool l4 = true;
    }
    bytes9 l5 = bytes9(0xffffffffffffffffff);
    int256 l6 = (int256(0) % int256(57896044618658097711785492504343953926634992332820282019728792003956564819967));
    function (int128, bytes memory, bytes memory) external   returns (int152, uint240, address) l7;
  }
  modifier m0(address i0,uint168[1] memory i1) 
  {
    _;
    (uint160 l0, bool l1) = f0({i0: bytes14(0xffffffffffffffffffffffffffff)});
    for(uint solinit0 = 0; solinit0 < (uint256((((uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935) * uint256(85797633464414901089204783185015534169961313494006601678340938742304440577327)) | uint256(0)) / uint256(0))) % 11); solinit0++)
    {
      assert((l1 = (uint104((uint104(0) / (~(((uint104(15257086128807060784968925889000) << uint208(uint208(411376139330301510538742295639337626245683966408394965837152255))) >> uint48(uint48(281474976710655))))))) == uint104(13725947158103255041253162775203))));
      bool l2 = (uint248(0) <= ((((uint248(0) + uint248(0)) - uint248(65159226516361535495963339880367051430997473736974500428774336639480944193)) & uint248(0)) & uint248(168187868176710864229143890187299485398981890234383617953757747784540083847)));
    }
    unchecked {
      int40 l3 = (int40((int40(549755813887) / int40(0))) ^ ((int40(92162856717) + int40(549755813887)) % int40(549755813887)));
      function (bool, bytes25, address payable) internal   returns (uint48, int88, string memory) l4;
      bool l5 = false;
    }
    { }
    assembly
    {
    }
  }
  function f1(bytes5 i0,bytes memory i1) external  m0(address(0x0000000000000000000000000000000000000001),[uint168(0)]) 
  {
  }
}
using L0 for bytes14;
struct St0 {
  bytes el0;
  bool el1;
  address el2;
  uint48 el3;
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  uint176   s0 = uint176(0);
  bytes7  public s1 = bytes7(0x0e423fd7b1ed12);
  bytes21   s2;
  constructor(bytes21 i0)   {
    s2 &= ((bytes21(((~(bytes30(0x000000000000000000000000000000000000000000000000000000000000))) | bytes30(0x673a98309d27d808bd9791ea8086f5c822c95b8d0a172a1c1e4ab7186d98))) ^ bytes21(0x8865371839d8f4866aceae23b8168fefa317c87cdb)) | bytes21(0x000000000000000000000000000000000000000000));
    {
      bytes21  l0 = s2;
      bytes21  l1 = l0;
      assert(l1 == s2);
      bytes7  l2 = s1;
      bytes7  l3 = l2;
      assert(l3 == s1);
      s2 |= bytes21(0xede1106d5ddf5879cc12c1f334a5f5cb36bda95516);
      assert(l1 == (uint104((uint104(0) / (~(((uint104(15257086128807060784968925889000) << uint208(uint208(411376139330301510538742295639337626245683966408394965837152255))) >> uint48(uint48(281474976710655))))))) == uint104(13725947158103255041253162775203)));
      bytes21  l4 = s2;
      bytes21  l5 = l4;
      assert(l5 == s2);
    }
  }
}
// ----
// Warning 3149: (su0.sol:1312-1438): The result type of the shift operation is equal to the type of the first operand (uint104) ignoring the (larger) type of the second operand (uint208) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 3149: (su1.sol:714-840): The result type of the shift operation is equal to the type of the first operand (uint104) ignoring the (larger) type of the second operand (uint208) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 2271: (su1.sol:680-927): Built-in binary operator == cannot be applied to types bytes21 and bool.
